# QTStudy

./: .gitignore  README.md  test.cpp
Experimental/BtnIconLeft/: btnIconLeft.py
Experimental/QProxyStyleTest/: QProxyStyleTest.pro  icons.qrc  main.cpp  menubtnstyle.cpp  menubtnstyle.h  widget.cpp  widget.h  widget.ui
Experimental/QtDwonlaodManager/: QtDwonlaodManager.pro  main.cpp  utils.cpp  utils.h  widget.cpp  widget.h  widget.ui
MyProject/Console/: CMD.md  CMakeLists.txt  exec.hpp  main.cpp  widget.cpp  widget.h
MyProject/EducationalSystem/: .gitignore  EducationalSystem.pro  README.md  config.ini  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  studentitemmodel.cpp  studentitemmodel.h
MyProject/IM/: README.md
MyProject/ImageViewer/: CMakeLists.txt  README.md  constants.hpp  mainwindow.cpp  mainwindow.h  res.qrc  utils.hpp
MyProject/ImageViewer/lib/QtAwesome/: CMakeLists.txt
MyProject/MandelbrotFractalThreadPool/: Job.cpp  Job.h  JobResult.h  MandelbrotCalculator.cpp  MandelbrotCalculator.h  MandelbrotFractalThreadPool.pro  MandelbrotWidget.cpp  MandelbrotWidget.h  main.cpp
MyProject/NISForward_multithread/: Handle.cpp  Handle.h  NISForward.pro  global.cpp  global.h  listenThrd.cpp  listenThrd.h  main.cpp  mainHandle.ui  makevcpp.bat  recvThrd.cpp  recvThrd.h
MyProject/RegexExample/: CMakeLists.txt  main.cpp  regexpdialog.cpp  regexpdialog.h
MyProject/StudentQuery/: CMakeLists.txt  app_win32.rc  xmake.lua
MyProject/TableViewCheckbox/: BtnPopmenu.py  CheckboxHeader-2.py  CheckboxHeader.py  EachRowCheckbox.py
MyProject/TableViewDemo/: TableViewDemo.pro  delegatetableviewdialog.cpp  delegatetableviewdialog.h  delegatetableviewdialog.ui  main.cpp  mydelegate.cpp  mydelegate.h
MyProject/WechatDuplicate/: WechatDuplicate.pro  main.cpp  widget.cpp  widget.h  widget.ui
MyProject/downloadExample/: main.cpp  xmake.lua
MyProject/downloadFile/: CMakeLists.txt  xmake.lua
MyProject/test/: xmake.lua
MyProject/two_font_demos/: .gitignore
PyQt/: .pylintrc  README.md
PyQt/Calculator/: calculator.py  calculator.ui
PyQt/FirstPyQt/: FirstPyQtPro.e4p  FirstWin.py
PyQt/PycharmPyQtDemo/: hellowrold.py  hellowrold.ui  main.py
PyQt/StudentQuery/: README.md  StudentQuery.py  StudentQuery.spec  getRequest.py  postRequest.py  resource.py  resource.qrc
PyQt/chapter04/: qt04_closeMainWin.py  qt401_widgetGeometry.py  qt402_QMainWin.py  qt405_center.py
PyQt/chapter04_basic_window_components/: qt04_QClipboard.py  qt04_QDateTimeEdit01.py  qt04_QDateTimeEdit02.py  qt04_QFileDialog.py  qt04_QFontDialog.py  qt04_QInputDialog.py  qt04_QMessageBox.py  qt04_QPixmap.py  qt04_QPrinter.py  qt04_QScrollBar.py  qt04_QStackedWidget.py  qt04_drag.py  qt04_drawBrush.py  qt04_drawPen.py  qt04_drawPoint.py  qt04_drawText.py  qt04_lineEditEchoMode.py  qt04_lineEditFull.py  qt04_lineEditMask.py  qt04_lineEditVerify.py  qt04_textEdit.py  qt403_QIcon.py  qt404_QToolTip.py  qt406_QLabel.py  qt408_QPushButton.py  qt409_QRadio.py  qt410_QCheckbox.py  qt411_QComboBox.py  qt412_QSpinBox.py  qt413_QSlider.py  qt414_QMenu.py  qt415_QToolBar.py  qt416_Dialog.py  qt417_QStatusBar.py
PyQt/chapter05_advanced_interface_controls/: MySharedObject.py  qt05_QDockWidget.py  qt05_QListWidget.py  qt05_QMultipleDoc.py  qt05_QSplitter.py  qt05_freshUI.py  qt05_listView.py  qt05_tbSelItem.py  qt05_tblBasic.py  qt05_tblCmb.py  qt05_tblItemAlign.py  qt05_tblItemColor.py  qt05_tblItemFont.py  qt05_tblItemIcon1.py  qt05_tblItemIcon2.py  qt05_tblItemOrder.py  qt05_tblItemSpan.py  qt05_tblMenu.py  qt05_tblRow.py  qt05_tblViewModel.py  qt05_thread01.py  qt05_thread02.py  qt05_thread03.py  qt05_timer01.py  qt05_timer02.py  qt05_treeview.py  qt05_treewidget01.py  qt05_treewidget02.py  qt05_treewidget03.py  qt05_webview01.py  qt05_webview02.py  (+4 more)
PyQtGui/: http_cache.sqlite  notes.db
PySide6Study/: README.md
QmlBook/: .pylintrc
Qt5.9Develop/: README.md
Qt5.9Develop/chapter11Database/QueryEdit/: CMakeLists.txt  wdialogdata.cpp  wdialogdata.h  wdialogdata.ui
Qt5.9Develop/chapter12Plugin/Promosion/: CMakeLists.txt  qmybattery.cpp  qmybattery.h  widget.cpp  widget.ui
Qt5.9Develop/chapter14Network/TCP/TCPServer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc
QtClass/Console/: CMakeLists.txt  main.cpp  sample.csv
QtClass/DrawingShapes/: CMakeLists.txt  customwidget.cpp  customwidget.h
QtDesingPattern/: README.md
QtDesingPattern/01_cpp_intro/qt_stream/: CMakeLists.txt  main.cpp  qt_stream.hpp  sizeof.hpp  stl_file_stream.cpp
QtDesingPattern/02_QObject/CardGame/: CMakeLists.txt  blackjack.cpp  blackjack.h  blackjack.ui  card.cpp  card.h  carddeck.cpp  carddeck.h  cardhand.cpp  cardhand.h  main.cpp  res.qrc
QtDesingPattern/02_QObject/EventLoop/: CMakeLists.txt  keysequencelabel.cpp  keysequencelabel.h  keysequencelabel.ui  main.cpp
QtDesingPattern/02_QObject/EventLoop/lib/objectbrowser/: CMakeLists.txt  obexport.h
QtDesingPattern/02_QObject/Life/: CMakeLists.txt  lifemainwindow.cpp  lifemainwindow.h  lifemainwindow.ui  lifewidget.cpp  lifewidget.h  main.cpp
QtDesingPattern/02_QObject/Settings/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
QtDesingPattern/02_QObject/Undo/: CMakeLists.txt  image-manip.cpp  image-manip.h  main.cpp  undomainwin.cpp  undomainwin.h
QtDesingPattern/02_QObject/person_bunch/: CMakeLists.txt  main.cpp  person.cpp  person.h
QtDesingPattern/03_Container/FuncPointer/: CMakeLists.txt  main.cpp
QtDesingPattern/03_Container/ShareData/: CMakeLists.txt  StringData.h  main.cpp  mystring.cpp  mystring.h  sstring.cpp  sstring.h
QtDesingPattern/04_Reflection/MetaType/: CMakeLists.txt  fraction.h  main.cpp
QtDesingPattern/04_Reflection/QtRTTI/: CMakeLists.txt  main.cpp
QtDesingPattern/05_ModelView/MultipleView/: CMakeLists.txt  createModel.hpp  splitter.py  widget.cpp
QtDesingPattern/06_Validate/CustomValidator/: CMakeLists.txt  main.cpp  palidromeform.cpp  palidromeform.h  palindate.cpp  palindate.h
QtDesingPattern/06_Validate/Regex/: CMakeLists.txt  main.cpp
QtQuickEntry/: README.md
Utils/: README.md
(+1581 files in other folders)
